--- a/views/clientroom/index.ejs
+++ b/views/clientroom/index.ejs
@@ -84,5 +84,38 @@
 <!--<script src="angular-youtube-embed.js"></script>-->
 
 <!--CLIENTROOM SCRIPTS-->
-<script src="/min/app.clientroom.min.js"></script>
+<script src="/vendor/jquery/jquery.js"></script>
+<script src="/vendor/lodash/lodash.js"></script>
+<script src="/vendor/bootstrap/bootstrap.js"></script>
+<script src="/vendor/momentjs/moment.js"></script>
+<script src="/vendor/humanize-duration/humanize-duration.js"></script>
+<script src="/vendor/angular/angular.js"></script>
+<script src="/vendor/angular-ui-router/angular-ui-router.js"></script>
+<script src="/vendor/angular-sanitize/angular-sanitize.js"></script>
+<script src="/vendor/angular-cookies/angular-cookies.js"></script>
+<script src="/vendor/angular-bind-html-compile/angular-bind-html-compile.js"></script>
+<script src="/vendor/angular-timer/angular-timer.js"></script>
+<script src="/vendor/i18next/i18next.js"></script>
+<script src="/vendor/ng-i18next/ng-i18next.js"></script>
+<script src="/js/common/app.js"></script>
+<script src="/js/common/services/rtcapi.js"></script>
+<script src="/js/common/services/lodash.js"></script>
+<script src="/js/common/services/guid.js"></script>
+<script src="/js/common/services/utils.js"></script>
+<script src="/js/common/services/memo.js"></script>
+<script src="/js/common/services/fluidGrid.js"></script>
+<script src="/js/common/services/soundEffectManager.js"></script>
+<script src="/js/common/services/sounds.js"></script>
+<script src="/js/common/services/serverSocket.js"></script>
+<script src="/js/common/services/serverSocketConfig.js"></script>
+<script src="/js/common/values/protocol.js"></script>
+<script src="/js/common/values/State.js"></script>
+<script src="/js/clientroom/app.js"></script>
+<script src="/js/clientroom/services/EventService.js"></script>
+<script src="/js/clientroom/services/SnapshooterService.js"></script>
+<script src="/js/clientroom/services/AvatarProvider.js"></script>
+<script src="/js/clientroom/services/RoomState.js"></script>
+<script src="/js/clientroom/services/ChatService.js"></script>
+<script src="/js/clientroom/directives/ChatDirective.js"></script>
+<script src="/js/clientroom/controllers/LiveController.js"></script>
 <!--CLIENTROOM SCRIPTS END-->
