--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -215,7 +215,33 @@
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
 <!--DASHBOARD SCRIPTS-->
-<script src="/min/app.dashboard.min.js"></script>
+<script src="/vendor/jquery/jquery.js"></script>
+<script src="/vendor/lodash/lodash.js"></script>
+<script src="/vendor/bootstrap/bootstrap.js"></script>
+<script src="/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+<script src="/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+<script src="/js/plugins/pace/pace.min.js"></script>
+<script src="/js/dashboard/inspinia.js"></script>
+<script src="/vendor/angular/angular.js"></script>
+<script src="/vendor/angular-ui-router/angular-ui-router.js"></script>
+<script src="/vendor/angular-sanitize/angular-sanitize.js"></script>
+<script src="/vendor/angular-cookies/angular-cookies.js"></script>
+<script src="/vendor/angular-bind-html-compile/angular-bind-html-compile.js"></script>
+<script src="/vendor/ng-elif/elif.js"></script>
+<script src="/js/common/app.js"></script>
+<script src="/js/common/services/rtcapi.js"></script>
+<script src="/js/common/services/lodash.js"></script>
+<script src="/js/common/services/guid.js"></script>
+<script src="/js/common/services/utils.js"></script>
+<script src="/js/common/services/memo.js"></script>
+<script src="/js/common/services/soundEffectManager.js"></script>
+<script src="/js/common/services/sounds.js"></script>
+<script src="/js/dashboard/app.js"></script>
+<script src="/js/dashboard/filters/TimeAgoFilter.js"></script>
+<script src="/js/dashboard/services/CallService.js"></script>
+<script src="/js/dashboard/directives/TimeAgoDirective.js"></script>
+<script src="/js/dashboard/directives/ChatboxDirective.js"></script>
+<script src="/js/dashboard/controllers/LiveController.js"></script>
 <!--DASHBOARD SCRIPTS END-->
 
 <script>
