--- a/views/dashboard/layout.ejs
+++ b/views/dashboard/layout.ejs
@@ -18,7 +18,13 @@
   <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
   <!--DASHBOARD STYLES-->
-  <link rel="stylesheet" href="/min/app.dashboard.min.css">
+  <link rel="stylesheet" href="/styles/common.css">
+  <link rel="stylesheet" href="/styles/extra/animate.css">
+  <link rel="stylesheet" href="/css/dashboard/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/dashboard/dashboard.css">
+  <link rel="stylesheet" href="/css/dashboard/sticky.css">
+  <link rel="stylesheet" href="/css/dashboard/chatbox.css">
+  <link rel="stylesheet" href="/css/dashboard/custom.css">
   <!--DASHBOARD STYLES END-->
   <!-- This is needed because Facebook login redirects add #_=_ at the end of the URL-->
   <script type="text/javascript">
