--- a/assets/templates/dashboard/chatbox.html
+++ b/assets/templates/dashboard/chatbox.html
@@ -4,5 +4,53 @@
     <div class="popup-head-right"><a ng-click="close(client.callId)">✕</a></div>
     <div style="clear: both"></div>
   </div>
-  <div class="popup-messages"></div>
+  <div class="popup-messages">
+    <ol class="discussion">
+      <li class="other">
+        <div class="avatar">
+          <img
+            src="https://9229937fca34d9fdc42b103b76771bd702d4e276.googledrive.com/host/0BzoXdTvj84afYmtfOFN2S0czQ0U/icon3.png"/>
+        </div>
+        <div class="messages">
+          <p>yeah, they do early flights cause they connect with big airports. they wanna get u to your connection</p>
+          <time datetime="2009-11-13T20:00">Timothy • 51 min</time>
+        </div>
+      </li>
+      <li class="self">
+        <div class="avatar">
+          <img
+            src="https://9229937fca34d9fdc42b103b76771bd702d4e276.googledrive.com/host/0BzoXdTvj84afYmtfOFN2S0czQ0U/icon2.png"/>
+        </div>
+        <div class="messages">
+          <p>That makes sense.</p>
+
+          <p>It's a pretty small airport.</p>
+          <time datetime="2009-11-13T20:14">37 mins</time>
+        </div>
+      </li>
+      <li class="other">
+        <div class="avatar">
+          <img
+            src="https://9229937fca34d9fdc42b103b76771bd702d4e276.googledrive.com/host/0BzoXdTvj84afYmtfOFN2S0czQ0U/icon3.png"/>
+        </div>
+        <div class="messages">
+          <p>that mongodb thing looks good, huh?</p>
+
+          <p>
+            tiny master db, and huge document store</p>
+        </div>
+      </li>
+    </ol>
+  </div>
+  <div class="_50mz fbNubFlyoutFooter">
+    <div class="_552h"><textarea style="height: 15px;" class="uiTextareaAutogrow _552m"></textarea>
+    </div>
+    <div style="right: 0px;" class="_552n">
+      <div class="_10nr"></div>
+      <div class="_6a _552o">
+        <a class="btn btn-xs btn-success" ng-click="accept(client.callId)"><i class="fa fa-wechat chat"></i> Send</a>
+      </div>
+      <div></div>
+    </div>
+  </div>
 </div>
