Feauture: Agent send message to client successfully

--- a/assets/templates/dashboard/live.html
+++ b/assets/templates/dashboard/live.html
@@ -142,5 +142,5 @@
     </div>
   </div>
 
-  <chatbox ng-repeat="(id, client) in chatClients" clients="chatClients" client="client" on-close="closeChat(client.callId)"></chatbox>
+  <chatbox ng-repeat="(id, client) in chatClients" myid="me.easyrtcid" clients="chatClients" client="client" on-close="closeChat(client.callId)"></chatbox>
 </div>
