add pre-feature v0.2.x: select one of Rooms to online

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -39,6 +39,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 
   <!--STYLES-->
+  <link rel="stylesheet" href="/vendor/angular-ui-bootstrap/docs/css/style.css">
+  <link rel="stylesheet" href="/vendor/angular-ui-bootstrap/misc/demo/assets/demo.css">
+  <link rel="stylesheet" href="/vendor/angular-ui-bootstrap/misc/demo/assets/rainbow.css">
   <link rel="stylesheet" href="/vendor/bootstrap/bootstrap.css">
   <link rel="stylesheet" href="/vendor/jquery-impromptu/jquery-impromptu.css">
   <link rel="stylesheet" href="/styles/common.css">
