--- a/assets/templates/dashboard/live.html
+++ b/assets/templates/dashboard/live.html
@@ -18,6 +18,7 @@
     <div class="ibox float-e-margins">
       <div class="ibox-title">
         <h5><i class="fa fa-headphones"></i> Client</h5>
+
         <div class="ibox-tools hidden-xs">
           <span class="label label-primary-light">10:13m</span>
         </div>
@@ -25,7 +26,7 @@
       <div class="ibox-content">
 
         <div>
-          <p ng-show="!ismeeting">Connecting video call to your client  ...</p>
+          <p ng-show="!ismeeting">Connecting video call to your client ...</p>
           <video id="caller" width="300" height="200"></video>
           <div id="otherClients">
 
@@ -40,6 +41,7 @@
     <div class="ibox float-e-margins no-drop">
       <div class="ibox-title">
         <h5><i class="fa fa-slideshare"></i> Waiting Room</h5>
+
         <div class="ibox-tools">
           <span class="label label-warning-light">{{waitingCount}} Waiting </span>
           <a class="collapse-link">
@@ -52,89 +54,104 @@
       </div>
       <div class="ibox-content ibox-heading">
         <h3>You have {{waitingCount}} people in waiting list</h3>
+
         <div class="animate-switch-container" ng-switch on="me.inconversation">
-          <small class="animate-switch" ng-switch-when="true"><i class="fa fa-map-marker"></i> Your dialogist: {{me.dialogist.clientName}}, processing: {{processingCount}}</small>
-          <small class="animate-switch" ng-switch-default><i class="fa fa-map-marker"></i> Your session ID: {{me.easyrtcid}}</small>
+          <small class="animate-switch" ng-switch-when="true"><i class="fa fa-map-marker"></i> Your dialogist:
+            {{me.dialogist.clientName}}, processing: {{processingCount}}
+          </small>
+          <small class="animate-switch" ng-switch-default><i class="fa fa-map-marker"></i> You are in room:  <span
+            class="dropdown" dropdown on-toggle="toggled(open)">
+      <a class="dropdown-toggle" dropdown-toggle>{{lastVisit}}</a>
+      <ul class="dropdown-menu">
+        <li ng-repeat="room in myRooms">
+          <a ng-click="$parent.lastVisit = room">{{room}}</a>
+        </li>
+      </ul>
+    </span>
+          </small>
         </div>
       </div>
       <div class="ibox-content inspinia-timeline">
 
-          <div class="feed-activity-list">
+        <div class="feed-activity-list">
 
-            <div class="feed-element" ng-repeat="(id, client) in waitingClients">
-              <a href="profile.html" class="pull-left">
-                <img alt="image" class="img-circle" src="/img/profile.jpg">
-              </a>
-              <div class="media-body ">
-                <small class="pull-right"><span timeago="{{client.roomJoinTime}}"></span></small>
-                <strong>{{client.name}}</strong> joined.<br>
-                <small class="text-muted">Email: {{client.email}}</small>
-                <div class="actions">
-                  <a class="btn btn-xs btn-success" ng-click="accept(client.callId)"><i class="fa fa-phone accept"></i> Accept </a>
-                  <a class="btn btn-xs btn-primary" ng-click="chat(client.callId)"><i class="fa fa-wechat chat"></i> Chat</a>
-                  <a class="btn btn-xs btn-danger" ng-click="deny(client.callId)"><i class="fa fa-minus-circle deny"></i> Deny</a>
-                </div>
-                <div class="well animate-if" ng-if="client.messages && client.messages.length > 0">
+          <div class="feed-element" ng-repeat="(id, client) in waitingClients">
+            <a href="profile.html" class="pull-left">
+              <img alt="image" class="img-circle" src="/img/profile.jpg">
+            </a>
+
+            <div class="media-body ">
+              <small class="pull-right"><span timeago="{{client.roomJoinTime}}"></span></small>
+              <strong>{{client.name}}</strong> joined.<br>
+              <small class="text-muted">Email: {{client.email}}</small>
+              <div class="actions">
+                <a class="btn btn-xs btn-success" ng-click="accept(client.callId)"><i class="fa fa-phone accept"></i>
+                  Accept </a>
+                <a class="btn btn-xs btn-primary" ng-click="chat(client.callId)"><i class="fa fa-wechat chat"></i> Chat</a>
+                <a class="btn btn-xs btn-danger" ng-click="deny(client.callId)"><i class="fa fa-minus-circle deny"></i>
+                  Deny</a>
+              </div>
+              <div class="well animate-if" ng-if="client.messages && client.messages.length > 0">
                   <span ng-repeat="message in (client && client.messages)">
                     {{message.message}}<br/>
                   </span>
-                </div>
-
               </div>
+
             </div>
-
-            <!--<div class="feed-element">-->
-              <!--<a href="profile.html" class="pull-left">-->
-                <!--<img alt="image" class="img-circle" src="/img/profile.jpg">-->
-              <!--</a>-->
-              <!--<div class="media-body ">-->
-                <!--<small class="pull-right">2m ago</small>-->
-                <!--<strong>Monica Smith</strong> joined.<br>-->
-                <!--<small class="text-muted">Today 5:60 pm - 12.06.2014</small>-->
-                <!--<div class="actions">-->
-                  <!--<a class="btn btn-xs btn-success"><i class="fa fa-phone accept"></i> Accept </a>-->
-                  <!--<a class="btn btn-xs btn-primary"><i class="fa fa-wechat chat"></i> Chat</a>-->
-                  <!--<a class="btn btn-xs btn-danger"><i class="fa fa-minus-circle deny"></i> Deny</a>-->
-                <!--</div>-->
-                <!--<div class="well">-->
-                  <!--Hello bussiness ! <br/> Could i ask you a question ? <br/>-->
-                  <!--About the camera i wanted to buy.-->
-                <!--</div>-->
-
-              <!--</div>-->
-            <!--</div>-->
-
-            <!--<div class="feed-element">-->
-              <!--<a href="profile.html" class="pull-left">-->
-                <!--<img alt="image" class="img-circle" src="/img/a2.jpg">-->
-              <!--</a>-->
-              <!--<div class="media-body ">-->
-                <!--<small class="pull-right">5m ago</small>-->
-                <!--<strong>Mark Johnson</strong> joined. <br>-->
-                <!--<small class="text-muted">Today 2:10 pm - 12.06.2014</small>-->
-                <!--<div class="actions">-->
-                  <!--<a class="btn btn-xs btn-success"><i class="fa fa-phone accept"></i> Accept </a>-->
-                  <!--<a class="btn btn-xs btn-primary"><i class="fa fa-wechat chat"></i> Chat</a>-->
-                  <!--<a class="btn btn-xs btn-danger"><i class="fa fa-minus-circle deny"></i> Deny</a>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div>-->
-            <!--<div class="feed-element">-->
-              <!--<a href="profile.html" class="pull-left">-->
-                <!--<img alt="image" class="img-circle" src="/img/a3.jpg">-->
-              <!--</a>-->
-              <!--<div class="media-body ">-->
-                <!--<small class="pull-right">10m ago</small>-->
-                <!--<strong>Janet Rosowski</strong> joined. <br>-->
-                <!--<small class="text-muted">2 days ago at 8:30am</small>-->
-                <!--<div class="actions">-->
-                  <!--<a class="btn btn-xs btn-success"><i class="fa fa-phone accept"></i> Accept </a>-->
-                  <!--<a class="btn btn-xs btn-primary"><i class="fa fa-wechat chat"></i> Chat</a>-->
-                  <!--<a class="btn btn-xs btn-danger"><i class="fa fa-minus-circle deny"></i> Deny</a>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div>-->
           </div>
+
+          <!--<div class="feed-element">-->
+          <!--<a href="profile.html" class="pull-left">-->
+          <!--<img alt="image" class="img-circle" src="/img/profile.jpg">-->
+          <!--</a>-->
+          <!--<div class="media-body ">-->
+          <!--<small class="pull-right">2m ago</small>-->
+          <!--<strong>Monica Smith</strong> joined.<br>-->
+          <!--<small class="text-muted">Today 5:60 pm - 12.06.2014</small>-->
+          <!--<div class="actions">-->
+          <!--<a class="btn btn-xs btn-success"><i class="fa fa-phone accept"></i> Accept </a>-->
+          <!--<a class="btn btn-xs btn-primary"><i class="fa fa-wechat chat"></i> Chat</a>-->
+          <!--<a class="btn btn-xs btn-danger"><i class="fa fa-minus-circle deny"></i> Deny</a>-->
+          <!--</div>-->
+          <!--<div class="well">-->
+          <!--Hello bussiness ! <br/> Could i ask you a question ? <br/>-->
+          <!--About the camera i wanted to buy.-->
+          <!--</div>-->
+
+          <!--</div>-->
+          <!--</div>-->
+
+          <!--<div class="feed-element">-->
+          <!--<a href="profile.html" class="pull-left">-->
+          <!--<img alt="image" class="img-circle" src="/img/a2.jpg">-->
+          <!--</a>-->
+          <!--<div class="media-body ">-->
+          <!--<small class="pull-right">5m ago</small>-->
+          <!--<strong>Mark Johnson</strong> joined. <br>-->
+          <!--<small class="text-muted">Today 2:10 pm - 12.06.2014</small>-->
+          <!--<div class="actions">-->
+          <!--<a class="btn btn-xs btn-success"><i class="fa fa-phone accept"></i> Accept </a>-->
+          <!--<a class="btn btn-xs btn-primary"><i class="fa fa-wechat chat"></i> Chat</a>-->
+          <!--<a class="btn btn-xs btn-danger"><i class="fa fa-minus-circle deny"></i> Deny</a>-->
+          <!--</div>-->
+          <!--</div>-->
+          <!--</div>-->
+          <!--<div class="feed-element">-->
+          <!--<a href="profile.html" class="pull-left">-->
+          <!--<img alt="image" class="img-circle" src="/img/a3.jpg">-->
+          <!--</a>-->
+          <!--<div class="media-body ">-->
+          <!--<small class="pull-right">10m ago</small>-->
+          <!--<strong>Janet Rosowski</strong> joined. <br>-->
+          <!--<small class="text-muted">2 days ago at 8:30am</small>-->
+          <!--<div class="actions">-->
+          <!--<a class="btn btn-xs btn-success"><i class="fa fa-phone accept"></i> Accept </a>-->
+          <!--<a class="btn btn-xs btn-primary"><i class="fa fa-wechat chat"></i> Chat</a>-->
+          <!--<a class="btn btn-xs btn-danger"><i class="fa fa-minus-circle deny"></i> Deny</a>-->
+          <!--</div>-->
+          <!--</div>-->
+          <!--</div>-->
+        </div>
 
         <button class="btn btn-white btn-block m-t"><i class="fa fa-arrow-down"></i> Show More</button>
 
@@ -142,5 +159,6 @@
     </div>
   </div>
 
-  <chatbox ng-repeat="(id, client) in chatClients" myid="me.easyrtcid" clients="chatClients" client="client" on-close="closeChat(client.callId)"></chatbox>
+  <chatbox ng-repeat="(id, client) in chatClients" myid="me.easyrtcid" clients="chatClients" client="client"
+           on-close="closeChat(client.callId)"></chatbox>
 </div>
