--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -224,6 +224,7 @@
 <script src="/js/dashboard/inspinia.js"></script>
 <script src="/vendor/angular/angular.js"></script>
 <script src="/vendor/angular-ui-router/angular-ui-router.js"></script>
+<script src="/vendor/angular-ui-bootstrap/src/dropdown/dropdown.js"></script>
 <script src="/vendor/angular-sanitize/angular-sanitize.js"></script>
 <script src="/vendor/angular-cookies/angular-cookies.js"></script>
 <script src="/vendor/angular-bind-html-compile/angular-bind-html-compile.js"></script>
