--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -227,6 +227,7 @@
 <script src="/vendor/angular-ui-bootstrap/src/dropdown/dropdown.js"></script>
 <script src="/vendor/angular-sanitize/angular-sanitize.js"></script>
 <script src="/vendor/angular-cookies/angular-cookies.js"></script>
+<script src="/vendor/angular-sails/angular-sails.js"></script>
 <script src="/vendor/angular-bind-html-compile/angular-bind-html-compile.js"></script>
 <script src="/vendor/ng-elif/elif.js"></script>
 <script src="/js/common/app.js"></script>
