--- a/views/dashboard/layout.ejs
+++ b/views/dashboard/layout.ejs
@@ -16,11 +16,11 @@
 
   <!-- CDN -->
   <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700,600' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
   <!--DASHBOARD STYLES-->
   <link rel="stylesheet" href="/styles/common.css">
   <link rel="stylesheet" href="/styles/extra/animate.css">
-  <link rel="stylesheet" href="/css/dashboard/bootstrap.min.css">
   <link rel="stylesheet" href="/css/dashboard/dashboard.css">
   <link rel="stylesheet" href="/css/dashboard/sticky.css">
   <link rel="stylesheet" href="/css/dashboard/chatbox.css">
